caa 14 Nov 5.30pm

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                                 <ul>
                                     <li>The very patient TAs that were willing to entertain my noob questions over the past 4 weeks</li>
                                     <li>The GovTech team that painstakingly put together this course</li>
-                                    <li>My SNSO colleagues for giving me the opportunity and protected time to go on this course </li>
+                                    <li>My SNSO colleagues for giving me protected time to go on this course </li>
                                     <li>Friends and family that gave my suggestions on how to improve this solution along the way</li>
                                     <li>CursorAI for being a lifesaver</li>
                                     <li>Illustration from <a href="https://storyset.com/people">Storyset</a></li>
