--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- Add Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body class="bg-light">
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -58,7 +58,7 @@
     </header>
 
         <!-- About Content -->
-        <main class="container">
+        <main class="container about-page">
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="card">
@@ -82,7 +82,7 @@
                                 <ul>
                                     <li>The very patient TAs that were willing to entertain my noob questions over the past 4 weeks</li>
                                     <li>The GovTech team that painstakingly put together this course</li>
-                                    <li>My SNSO colleagues for giving me protected time to go on this course </li>
+                                    <li>My SNSO colleagues for giving me protected time so I could learn how to ~~code </li>
                                     <li>Friends and family that gave my suggestions on how to improve this solution along the way</li>
                                     <li>CursorAI for being a lifesaver</li>
                                     <li>Illustration from <a href="https://storyset.com/people">Storyset</a></li>
