--- a/about.html
+++ b/about.html
@@ -18,6 +18,17 @@
 
     <!-- Add Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KQVQT11QK4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KQVQT11QK4');
+</script>
+
 </head>
 <body>
     <!-- Navigation -->
@@ -38,22 +49,14 @@
 
     <div class="container-fluid py-2">
        <!-- Header Section -->
-       <header class="text-center mb-4">
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                
-                <div class="col-md-6 text-md-end pe-md-4">
-                    <div class="header-text-wrapper">
-                        <h1 class="display-4 fw-bold mb-2">THIRST TRAP</h1>
-                    </div>
+       <header>
+        <div class="header-container">
+            <a href="index.html" class="header-link">
+                <h1 class="display-4 fw-bold">THIRST TRAP</h1>
+                <div class="header-illustration">
+                    <img src="logo.svg" alt="Thirst Trap Illustration" class="header-logo">
                 </div>
-                
-                <div class="col-md-6 ps-md-4">
-                    <div class="header-illustration">
-                        <img src="logo.svg" alt="Thirst Trap Illustration" class="header-logo">
-                    </div>
-                </div>
-            </div>
+            </a>
         </div>
     </header>
 
