caa 19 nov 12.20pm

--- a/index.html
+++ b/index.html
@@ -251,6 +251,12 @@
                                 <i class="bi bi-asterisk me-1"></i>
                                 Estimated prices are generally before GST and service charges.
                             </p>
+
+                            <p class="mb-2">
+                                <i class="bi bi-asterisk me-1"></i>
+                                This website is created for learning purposes only. The information provided here should not be considered professional advice. Please note that we make no guarantees regarding the accuracy, completeness, or reliability of the contents of this website. Any actions you take based on the contents of this website are at your own risk. We are not liable for any losses or damages incurred from the use of this website.
+                            </p>
+
                         </div>
                     </div>
                 </div>
